Item165:    * added automaxexpand for TABPANES    * added jquery.shake plugin    * reworked BUTTON tag
git-svn-id: http://svn.foswiki.org/trunk@596 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/TWiki/JQueryPlugin/Makefile
+++ b/JQueryPlugin/pub/TWiki/JQueryPlugin/Makefile
@@ -23,6 +23,7 @@ TARGET= \
   jquery.maskedinput.js.gz \
   jquery.rating.css.gz \
   jquery.rating.js.gz \
+  jquery.shake.js.gz \
   jquery.spinner.js.gz \
   jquery.superfish.css.gz \
   jquery.superfish.js.gz \
