Item109: TWikiGuest -> WikiGuest
git-svn-id: http://svn.foswiki.org/trunk@665 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/admin/mrtg/twiki.cfg
+++ b/core/tools/admin/mrtg/twiki.cfg
@@ -28,8 +28,8 @@ Title[twiki]: TWiki stats on HOST
 PageTop[twiki]: <H1>TWiki utilization for HOST
   </H1>shows the number of twiki topics requested. 
 ShortLegend[twiki]: hits
-Legend1[twiki]: total Topic requests by TWikiGuest
-LegendI[twiki]: &nbsp; TWikiGuest:
+Legend1[twiki]: total Topic requests by WikiGuest
+LegendI[twiki]: &nbsp; WikiGuest:
 Legend2[twiki]: total Topic requests by Registered users
 LegendO[twiki]: &nbsp; Registered users:
 Legend3[twiki]: total Topic views
