Item71:   * improved BUTTON to be a replacement for submit, clear and reset input buttons   * fixed issues with Ie6   * added ie6 png fixes   * added missing jquery.wikiword plugin
git-svn-id: http://svn.foswiki.org/trunk@780 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/TWiki/JQueryPlugin/Makefile
+++ b/JQueryPlugin/pub/TWiki/JQueryPlugin/Makefile
@@ -29,6 +29,8 @@ TARGET= \
   jquery.superfish.js \
   jquery.validate.additional-methods.js \
   jquery.validate.js \
+  jquery.wikiword.js \
+  jquery.ifixpng.js \
   ui.accordion.js \
   ui.core.js \
   ui.datepicker.js \
@@ -50,7 +52,7 @@ GZIP=gzip
 
 .SUFFIXES: .js .css
 
-all: $(TARGET) $(TARGET:.js=.js.gz)
+all: $(TARGET) $(TARGET:.js=.js.gz) $(TARGET:.css=.css.gz)
 
 JS_VALIDATE_SOURCE=\
   jquery.validate.uncompressed.js \
@@ -58,19 +60,19 @@ JS_VALIDATE_SOURCE=\
 
 JS_SOURCES=\
   jquery.js \
-  jquery.metadata.js \
+  jquery.bgiframe.js \
+  jquery.chili.js \
   jquery.easing.js \
   jquery.hoverIntent.js \
-  jquery.bgiframe.js \
-  jquery.shrinkurls.js \
   jquery.innerfade.js \
-  jquery.tooltip.js \
+  jquery.metadata.js \
   jquery.nifty.js \
-  jquery.treeview.js \
-  jquery.treeview.async.js \
-  jquery.twiki.js \
+  jquery.shrinkurls.js \
   jquery.tabpane.js \
-  jquery.chili.js
+  jquery.tooltip.js \
+  jquery.treeview.async.js \
+  jquery.treeview.js \
+  jquery.twiki.js
 
 CSS_SOURCES=\
   jquery.nifty.css \
@@ -81,7 +83,6 @@ CSS_SOURCES=\
 jquery-all.js: $(JS_SOURCES) Makefile
 	@echo creating $@
 	@$(MINIFYJS) $(JS_SOURCES) > $@
-
 
 jquery-all.css: $(CSS_SOURCES) 
 	@echo creating $@
