--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -1,5 +1,5 @@
 #
-# TWiki Collaboration Platform, http://TWiki.org/
+# Foswiki - The Free Open Source Wiki, http://foswiki.org/
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
