Item230: defined on hash or arrays is deprecated
git-svn-id: http://svn.foswiki.org/trunk@843 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -50,9 +50,9 @@ if ( -e $CPANBASE ) {
 # Prepend to @INC, the Perl search path for modules
 unshift @INC, $twikiLibPath;
 if ($defaultingCPANBASE) {
-	push @INC, @localPerlLibPath if defined @localPerlLibPath;
+	push @INC, @localPerlLibPath if @localPerlLibPath;
 } else {
-	unshift @INC, @localPerlLibPath if defined @localPerlLibPath;
+	unshift @INC, @localPerlLibPath if @localPerlLibPath;
 }
 
 1;			    	# Return success for module loading
