Item295: another detox step, plus eliminate a warning in ACTIVATED_PLUGINS
git-svn-id: http://svn.foswiki.org/trunk@1054 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -11,7 +11,7 @@
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 #
-# setlib.cfg: determines the defaults for TWiki and Perl library paths
+# setlib.cfg: determines the defaults for Foswiki and Perl library paths
 #
 
 ###########################################################################
@@ -21,25 +21,28 @@
 ###########################################################################
 
 # for development, you can enable ASSERTS by adding
-# $ENV{TWIKI_ASSERTS} = 1;
+# $ENV{FOSWIKI_ASSERTS} = 1;
 # to your bin/LocalLib.cfg
 
-use vars qw( $twikiLibPath @localPerlLibPath );
+use vars qw( $foswikiLibPath @localPerlLibPath );
 
 eval 'require "LocalLib.cfg"';
+# if foswikiLibPath isn't defined, then see if $twikiLibPath is
+# for compatibility
+$foswikiLibPath = $twikiLibPath unless defined( $foswikiLibPath );
 
-unless (( defined ($twikiLibPath) ) and (-e $twikiLibPath)) {
+unless (( defined ($foswikiLibPath) ) and (-e $foswikiLibPath)) {
 	use Cwd qw( abs_path );
-	( $twikiLibPath ) = ($twikiLibPath = Cwd::abs_path( "../lib" )) =~ /(.*)/;
+	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "../lib" )) =~ /(.*)/;
 }
-if ($twikiLibPath eq "") {
-    $twikiLibPath = "../lib";
+if ($foswikiLibPath eq "") {
+    $foswikiLibPath = "../lib";
     warn "using relative path for libs - some plugins may break";
 }
 
 #    Path to local Perl modules
 my $defaultingCPANBASE = !defined($CPANBASE);
-$CPANBASE = "$twikiLibPath/CPAN/lib/" unless $CPANBASE;
+$CPANBASE = "$foswikiLibPath/CPAN/lib/" unless $CPANBASE;
 if ( -e $CPANBASE ) {
 	require Config;
 	my $VER = $Config::Config{version};
@@ -48,7 +51,7 @@ if ( -e $CPANBASE ) {
 }
 
 # Prepend to @INC, the Perl search path for modules
-unshift @INC, $twikiLibPath;
+unshift @INC, $foswikiLibPath;
 if ($defaultingCPANBASE) {
 	push @INC, @localPerlLibPath if @localPerlLibPath;
 } else {
