Item294: mmm, it builds debs, wonder if it works
git-svn-id: http://svn.foswiki.org/trunk@1853 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/rules
+++ b/core/tools/pkg/debian/rules
@@ -36,6 +36,8 @@ install: build
 	dh_clean -k
 	dh_installdirs
 
+	echo `pwd`
+
 	cp -r bin/* debian/foswiki/usr/lib/cgi-bin/foswiki
 	cp -r debian/foswiki/usr/lib/cgi-bin/foswiki/LocalLib.cfg.txt debian/foswiki/usr/lib/cgi-bin/foswiki/LocalLib.cfg
 
