--- a/core/tools/pkg/debian/rules
+++ b/core/tools/pkg/debian/rules
@@ -8,7 +8,7 @@ include /usr/share/dpatch/dpatch.make
 #export DH_VERBOSE=1
 
 # not www-data.  remember to sync with postinst.
-TWIKI_OWNER=www-data
+WIKI_OWNER=www-data
 
 configure: configure-stamp
 configure-stamp:
@@ -48,7 +48,7 @@ install: build
 	chmod 644 debian/foswiki/usr/lib/cgi-bin/foswiki/LocalLib.cfg
 	chmod 644 debian/foswiki/usr/lib/cgi-bin/foswiki/LocalLib.cfg.txt
 
-#	chown $(TWIKI_OWNER) debian/foswiki/usr/lib/cgi-bin/foswiki/*
+#	chown $(WIKI_OWNER) debian/foswiki/usr/lib/cgi-bin/foswiki/*
 	cp -Rp pub debian/foswiki/var/lib/foswiki/
 	cp -pR templates debian/foswiki/var/lib/foswiki/
 	cp -pR locale debian/foswiki/var/lib/foswiki/
@@ -63,13 +63,9 @@ install: build
 	date +%s > debian/foswiki/var/lib/foswiki/data/Sandbox/.mailnotify
 
 # change the unix owners -- don't bother, tar --owner does it
-# so now we don't even care if TWIKI_OWNER exists at build time
-#	chown -R $(TWIKI_OWNER) debian/foswiki/var/lib/foswiki/data
+# so now we don't even care if WIKI_OWNER exists at build time
+#	chown -R $(WIKI_OWNER) debian/foswiki/var/lib/foswiki/data
 # and change the RCS lock owners to match
-
-	#distribute the tools scripts
-	#cp UpgradeTwiki debian/foswiki/var/lib/foswiki
-	#chmod 777 debian/foswiki/var/lib/foswiki/UpgradeTwiki
 
 	mkdir debian/foswiki/var/lib/foswiki/tools
 	cp -r tools/* debian/foswiki/var/lib/foswiki/tools/
@@ -87,18 +83,18 @@ install: build
 
 
 	find debian/foswiki/var/lib/foswiki/data -type f -name '*,v' | \
-	  xargs -n1 perl -pi -e 's/^(\s)nobody:/\1$(TWIKI_OWNER):/ unless $$done; $$done=1 if /^\n$$/;'
+	  xargs -n1 perl -pi -e 's/^(\s)nobody:/\1$(WIKI_OWNER):/ unless $$done; $$done=1 if /^\n$$/;'
 	tar -cf - -C debian/foswiki var/lib/foswiki/data \
-		| tardy -User_NAme=$(TWIKI_OWNER) -Group_NAme=www-data \
+		| tardy -User_NAme=$(WIKI_OWNER) -Group_NAme=www-data \
 		| gzip -c -9 > debian/foswiki/usr/share/foswiki/foswiki-data.tar.gz
 	rm -rf debian/foswiki/var/lib/foswiki/data
 
 #do the same with pub - it should also only be replaced if there is none there already
-# and it needs to be owned by $(TWIKI_OWNER)
+# and it needs to be owned by $(WIKI_OWNER)
 	find debian/foswiki/var/lib/foswiki/pub -type f -name '*,v' | \
-	  xargs -n1 perl -pi -e 's/^(\s)nobody:/\1$(TWIKI_OWNER):/ unless $$done; $$done=1 if /^\n$$/;'
+	  xargs -n1 perl -pi -e 's/^(\s)nobody:/\1$(WIKI_OWNER):/ unless $$done; $$done=1 if /^\n$$/;'
 	tar -cf - -C debian/foswiki var/lib/foswiki/pub \
-		| tardy -User_NAme=$(TWIKI_OWNER) -Group_NAme=www-data \
+		| tardy -User_NAme=$(WIKI_OWNER) -Group_NAme=www-data \
 		| gzip -c -9 > debian/foswiki/usr/share/foswiki/foswiki-pub.tar.gz
 	rm -rf debian/foswiki/var/lib/foswiki/pub
 
@@ -122,8 +118,6 @@ install: build
 
 #move foswiki.cfg to /etc/foswiki
 	cp debian/LocalSite.cfg debian/foswiki/etc/foswiki/LocalSite.cfg
-	#mv debian/foswiki/usr/share/perl5/LocalSite.cfg.txt debian/foswiki/etc/foswiki/LocalSite.cfg.txt
-	#mv debian/foswiki/usr/share/perl5/TWiki.cfg debian/foswiki/etc/foswiki/TWiki.cfg
 
 	perl -pi~ -e 's|^(.foswikiLibPath).*|\1 = \"/etc/foswiki\";|;' debian/foswiki/usr/lib/cgi-bin/foswiki/LocalLib.cfg
 	#enable /var/lib/foswiki/lib as an extra lib dir for plugin installers (configure, fosiki extras and unziping)
