Item694: add t*compat pub dir 404 apache conf, add registration cfg and fix
git-svn-id: http://svn.foswiki.org/trunk@1895 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/LocalSite.cfg
+++ b/core/tools/pkg/debian/LocalSite.cfg
@@ -15,5 +15,6 @@ $Foswiki::cfg{RCS}{WorkAreaDir} = '/var/lib/foswiki/working/work_area';
 $Foswiki::cfg{TempfileDir} = '/var/lib/foswiki/working/tmp';
 $Foswiki::cfg{WorkingDir} = '/var/lib/foswiki/working';
 $Foswiki::cfg{SafeEnvPath} = '/usr/bin:/bin';
+$Foswiki::cfg{Register}{EnableNewUserRegistration} = 1;
 
 1;
