Item694: move libs out of perl to make way for CPAN and to avoid breaking twiki package if installed, also disable email as it will break registration - known issue :Item710
git-svn-id: http://svn.foswiki.org/trunk@1896 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/LocalSite.cfg
+++ b/core/tools/pkg/debian/LocalSite.cfg
@@ -16,5 +16,6 @@ $Foswiki::cfg{TempfileDir} = '/var/lib/foswiki/working/tmp';
 $Foswiki::cfg{WorkingDir} = '/var/lib/foswiki/working';
 $Foswiki::cfg{SafeEnvPath} = '/usr/bin:/bin';
 $Foswiki::cfg{Register}{EnableNewUserRegistration} = 1;
+$Foswiki::cfg{EnableEmail} = 0; 
 
 1;
