Item906: make it possible to call bin scripts from any directory
git-svn-id: http://svn.foswiki.org/trunk@2514 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -32,14 +32,19 @@
 
 use vars qw( $foswikiLibPath @localPerlLibPath );
 
-eval 'require "LocalLib.cfg"';
+require FindBin;
+my ($bin) = $FindBin::Bin =~ /^(.*)$/;
+use Cwd ();
+my ($LocalLib) = Cwd::abs_path( "$bin/LocalLib.cfg" ) =~ /(.*)/;
+
+eval 'require "'.$LocalLib.'";';
+
 # if foswikiLibPath isn't defined, then see if $twikiLibPath is
 # for compatibility
 $foswikiLibPath = $twikiLibPath unless defined( $foswikiLibPath );
 
 unless (( defined ($foswikiLibPath) ) and (-e $foswikiLibPath)) {
-	use Cwd qw( abs_path );
-	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "../lib" )) =~ /(.*)/;
+	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "$bin/../lib" )) =~ /(.*)/;
 }
 if ($foswikiLibPath eq "") {
     $foswikiLibPath = "../lib";
@@ -65,4 +70,3 @@ if ($defaultingCPANBASE) {
 }
 
 1;			    	# Return success for module loading
-
