Item1126: replace broken code for finding the LocalLib.cfg. I'm slightly concerned this is broken in 1.0.1, but masked by the way most of the scripts work
git-svn-id: http://svn.foswiki.org/trunk@2625 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -30,14 +30,12 @@
 # $ENV{FOSWIKI_ASSERTS} = 1;
 # to your bin/LocalLib.cfg
 
-use vars qw( $foswikiLibPath @localPerlLibPath );
+our $foswikiLibPath;
+our @localPerlLibPath;
 
-require FindBin;
-my ($bin) = $FindBin::Bin =~ /^(.*)$/;
-use Cwd ();
-my ($LocalLib) = Cwd::abs_path( "$bin/LocalLib.cfg" ) =~ /(.*)/;
-
-eval 'require "'.$LocalLib.'";';
+my $LocalLib = $INC{'setlib.cfg'}; # the dir where this setlib.cfg resides
+$LocalLib =~ s/setlib.cfg$/LocalLib.cfg/;
+do $LocalLib if -r $LocalLib;
 
 # if foswikiLibPath isn't defined, then see if $twikiLibPath is
 # for compatibility
