Item1126: The previous fix broke it on FreeBSD
git-svn-id: http://svn.foswiki.org/trunk@2630 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -33,9 +33,9 @@
 our $foswikiLibPath;
 our @localPerlLibPath;
 
-my $LocalLib = $INC{'setlib.cfg'}; # the dir where this setlib.cfg resides
+my $LocalLib = __FILE__; # the dir where this setlib.cfg resides
 $LocalLib =~ s/setlib.cfg$/LocalLib.cfg/;
-do $LocalLib if -r $LocalLib;
+require $LocalLib;
 
 # if foswikiLibPath isn't defined, then see if $twikiLibPath is
 # for compatibility
