--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -30,21 +30,29 @@
 # $ENV{FOSWIKI_ASSERTS} = 1;
 # to your bin/LocalLib.cfg
 
-our $foswikiLibPath;
-our @localPerlLibPath;
+use strict;
+use warnings;
 
-my $LocalLib = __FILE__; # the dir where this setlib.cfg resides
+# These might be defined in LocalLib.cfg
+our ( $foswikiLibPath, @localPerlLibPath, $CPANBASE );
+our $twikiLibPath;    # For compatibility
+
+my $LocalLib = __FILE__;    # the dir where this setlib.cfg resides
 $LocalLib =~ s/setlib.cfg$/LocalLib.cfg/;
-require $LocalLib;
+require $LocalLib if -r $LocalLib;
 
 # if foswikiLibPath isn't defined, then see if $twikiLibPath is
 # for compatibility
-$foswikiLibPath = $twikiLibPath unless defined( $foswikiLibPath );
+$foswikiLibPath = $twikiLibPath unless defined($foswikiLibPath);
 
-unless (( defined ($foswikiLibPath) ) and (-e $foswikiLibPath)) {
-	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "$bin/../lib" )) =~ /(.*)/;
+unless ( ( defined($foswikiLibPath) ) and ( -e $foswikiLibPath ) ) {
+    require FindBin;
+    FindBin->again;         # If we're running under mod_perl or the like
+    my ($bin) = $FindBin::Bin =~ /^(.*)$/;
+    ($foswikiLibPath) =
+      ( $foswikiLibPath = Cwd::abs_path("$bin/../lib") ) =~ /(.*)/;
 }
-if ($foswikiLibPath eq "") {
+if ( $foswikiLibPath eq "" ) {
     $foswikiLibPath = "../lib";
     warn "using relative path for libs - some plugins may break";
 }
@@ -53,18 +61,23 @@ if ($foswikiLibPath eq "") {
 my $defaultingCPANBASE = !defined($CPANBASE);
 $CPANBASE = "$foswikiLibPath/CPAN/lib/" unless $CPANBASE;
 if ( -e $CPANBASE ) {
-	require Config;
-	my $VER = $Config::Config{version};
-	my $SITEARCH = $Config::Config{archname};
-	push @localPerlLibPath, ( "$CPANBASE/arch", "$CPANBASE/$VER/$SITEARCH", "$CPANBASE/$VER", "$CPANBASE" );
+    require Config;
+    my $VER      = $Config::Config{version};
+    my $SITEARCH = $Config::Config{archname};
+    push @localPerlLibPath,
+      (
+        "$CPANBASE/arch", "$CPANBASE/$VER/$SITEARCH",
+        "$CPANBASE/$VER", "$CPANBASE"
+      );
 }
 
 # Prepend to @INC, the Perl search path for modules
 unshift @INC, $foswikiLibPath;
 if ($defaultingCPANBASE) {
-	push @INC, @localPerlLibPath if @localPerlLibPath;
-} else {
-	unshift @INC, @localPerlLibPath if @localPerlLibPath;
+    push @INC, @localPerlLibPath if @localPerlLibPath;
+}
+else {
+    unshift @INC, @localPerlLibPath if @localPerlLibPath;
 }
 
-1;			    	# Return success for module loading
+1;    # Return success for module loading
