Item1152: Foswiki fails after upgrade to 1.0.2 Reverting the change done in Item906 changeset 2514 Since noone can find a way to make these changes work in mod_perl and FindBin many places is described as not working with mod_perl this change needs to be reverted and another way will have to be found We lost release 1.0.2 because of this and the people that introduced the broken code has not done a thing to fix it. So I am reverting so we can get the code to work again.
git-svn-id: http://svn.foswiki.org/trunk@2766 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -30,29 +30,18 @@
 # $ENV{FOSWIKI_ASSERTS} = 1;
 # to your bin/LocalLib.cfg
 
-use strict;
-use warnings;
+use vars qw( $foswikiLibPath @localPerlLibPath );
 
-# These might be defined in LocalLib.cfg
-our ( $foswikiLibPath, @localPerlLibPath, $CPANBASE );
-our $twikiLibPath;    # For compatibility
-
-my $LocalLib = __FILE__;    # the dir where this setlib.cfg resides
-$LocalLib =~ s/setlib.cfg$/LocalLib.cfg/;
-require $LocalLib if -r $LocalLib;
-
+eval 'require "LocalLib.cfg"';
 # if foswikiLibPath isn't defined, then see if $twikiLibPath is
 # for compatibility
-$foswikiLibPath = $twikiLibPath unless defined($foswikiLibPath);
+$foswikiLibPath = $twikiLibPath unless defined( $foswikiLibPath );
 
-unless ( ( defined($foswikiLibPath) ) and ( -e $foswikiLibPath ) ) {
-    require FindBin;
-    FindBin->again;         # If we're running under mod_perl or the like
-    my ($bin) = $FindBin::Bin =~ /^(.*)$/;
-    ($foswikiLibPath) =
-      ( $foswikiLibPath = Cwd::abs_path("$bin/../lib") ) =~ /(.*)/;
+unless (( defined ($foswikiLibPath) ) and (-e $foswikiLibPath)) {
+	use Cwd qw( abs_path );
+	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "../lib" )) =~ /(.*)/;
 }
-if ( $foswikiLibPath eq "" ) {
+if ($foswikiLibPath eq "") {
     $foswikiLibPath = "../lib";
     warn "using relative path for libs - some plugins may break";
 }
@@ -61,23 +50,19 @@ if ( $foswikiLibPath eq "" ) {
 my $defaultingCPANBASE = !defined($CPANBASE);
 $CPANBASE = "$foswikiLibPath/CPAN/lib/" unless $CPANBASE;
 if ( -e $CPANBASE ) {
-    require Config;
-    my $VER      = $Config::Config{version};
-    my $SITEARCH = $Config::Config{archname};
-    push @localPerlLibPath,
-      (
-        "$CPANBASE/arch", "$CPANBASE/$VER/$SITEARCH",
-        "$CPANBASE/$VER", "$CPANBASE"
-      );
+	require Config;
+	my $VER = $Config::Config{version};
+	my $SITEARCH = $Config::Config{archname};
+	push @localPerlLibPath, ( "$CPANBASE/arch", "$CPANBASE/$VER/$SITEARCH", "$CPANBASE/$VER", "$CPANBASE" );
 }
 
 # Prepend to @INC, the Perl search path for modules
 unshift @INC, $foswikiLibPath;
 if ($defaultingCPANBASE) {
-    push @INC, @localPerlLibPath if @localPerlLibPath;
-}
-else {
-    unshift @INC, @localPerlLibPath if @localPerlLibPath;
+	push @INC, @localPerlLibPath if @localPerlLibPath;
+} else {
+	unshift @INC, @localPerlLibPath if @localPerlLibPath;
 }
 
-1;    # Return success for module loading
+1;			    	# Return success for module loading
+
