Item1177: Move dependency to UNIVERSAL::require after loading setlib.cfg, in case it's not installed on the system, so we can use the one bundled with Foswiki Fixed setlib.cfg so it doesn't rely on Cwd, otherwise installer scripts won't find our local CPAN librairies (and thus UNIVERSAL::require) Also removed the last remaining eval's to check for module existence, so they'll use this module. We still have an old bug laying around, that we can't decide if we're Foswiki or TWiki.
git-svn-id: http://svn.foswiki.org/trunk@2848 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -32,14 +32,18 @@
 
 use vars qw( $foswikiLibPath @localPerlLibPath );
 
-eval 'require "LocalLib.cfg"';
+my $LocalLib = __FILE__;    # the dir where this setlib.cfg resides
+$LocalLib =~ s/setlib.cfg$/LocalLib.cfg/;
+require $LocalLib if -r $LocalLib;
 # if foswikiLibPath isn't defined, then see if $twikiLibPath is
 # for compatibility
 $foswikiLibPath = $twikiLibPath unless defined( $foswikiLibPath );
 
 unless (( defined ($foswikiLibPath) ) and (-e $foswikiLibPath)) {
 	use Cwd qw( abs_path );
-	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "../lib" )) =~ /(.*)/;
+    my $bindir = __FILE__;
+    $bindir =~ s/setlib.cfg$//;
+	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "$bindir/../lib" )) =~ /(.*)/;
 }
 if ($foswikiLibPath eq "") {
     $foswikiLibPath = "../lib";
