Item1177: An extra / made a huge mess. That way it should be (getting chicken, it *is*) the same as what it was before (if __FILE__ is only setlib.cfg, it will take the current working directory ../lib as a base) This should fix configure with an non-existing LocalLib.cfg, or one that doesn't define $foswikiLibPath nor $twikiLibPath
git-svn-id: http://svn.foswiki.org/branches/Release01x00@2900 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/bin/setlib.cfg
+++ b/core/bin/setlib.cfg
@@ -43,7 +43,7 @@ unless (( defined ($foswikiLibPath) ) and (-e $foswikiLibPath)) {
 	use Cwd qw( abs_path );
     my $bindir = __FILE__;
     $bindir =~ s/setlib.cfg$//;
-	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "$bindir/../lib" )) =~ /(.*)/;
+	( $foswikiLibPath ) = ($foswikiLibPath = Cwd::abs_path( "$bindir../lib" )) =~ /(.*)/;
 }
 if ($foswikiLibPath eq "") {
     $foswikiLibPath = "../lib";
