Item1334: add localhost to permitted redirect
git-svn-id: http://svn.foswiki.org/trunk@3206 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/LocalSite.cfg
+++ b/core/tools/pkg/debian/LocalSite.cfg
@@ -4,6 +4,7 @@ $Foswiki::cfg{Site}{Lang} = 'en';
 $Foswiki::cfg{LocalesDir} = '/var/lib/foswiki/locale';
 $Foswiki::cfg{ScriptUrlPath} = '/cgi-bin/foswiki';
 $Foswiki::cfg{DefaultUrlHost} = 'http://your.domain.com';
+$Foswiki::cfg{PermittedRedirectHostUrls} = 'http://localhost';
 $Foswiki::cfg{Site}{FullLang} = 'en-us';
 $Foswiki::cfg{PubUrlPath} = '/foswiki/pub';
 $Foswiki::cfg{PubDir} = '/var/lib/foswiki/pub';
