Item8012: Debian ships with a log directory, but puts logs in data/ by default.
git-svn-id: http://svn.foswiki.org/trunk@3208 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/LocalSite.cfg
+++ b/core/tools/pkg/debian/LocalSite.cfg
@@ -1,5 +1,4 @@
 $Foswiki::cfg{DataDir} = '/var/lib/foswiki/data';
-$Foswiki::cfg{LogDir} = '/var/lib/foswiki/log';
 $Foswiki::cfg{Site}{Lang} = 'en';
 $Foswiki::cfg{LocalesDir} = '/var/lib/foswiki/locale';
 $Foswiki::cfg{ScriptUrlPath} = '/cgi-bin/foswiki';
@@ -19,4 +18,9 @@ $Foswiki::cfg{SafeEnvPath} = '/usr/bin:/bin';
 $Foswiki::cfg{Register}{EnableNewUserRegistration} = 1;
 $Foswiki::cfg{EnableEmail} = 0; 
 
+$Foswiki::cfg{LogDir} = '/var/log/foswiki';
+$Foswiki::cfg{ConfigurationLogName} = '$Foswiki::cfg{LogDir}/configurationlog.txt';
+$Foswiki::cfg{DebugFileName} = '$Foswiki::cfg{LogDir}/debug.txt';
+$Foswiki::cfg{WarningFileName} = '$Foswiki::cfg{LogDir}/warn%DATE%.txt';
+$Foswiki::cfg{LogFileName} = '$Foswiki::cfg{LogDir}/log%DATE%.txt';
 1;
