Item1345: add a ShorterUrl.conf that users can link into their apache
git-svn-id: http://svn.foswiki.org/trunk@3232 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/apache.conf
+++ b/core/tools/pkg/debian/apache.conf
@@ -18,12 +18,7 @@
 RedirectMatch /foswiki/?$ /cgi-bin/foswiki/view$1
 RedirectMatch /foswiki(/([A-Z].*)?)?$ /cgi-bin/foswiki/view$1
 
-#RewriteEngine on
-#RewriteRule ^/foswiki$ /cgi-bin/foswiki/view
-#RewriteRule ^/foswiki/$ /cgi-bin/foswiki/view
-
-#RewriteRule ^configure$ /bin/configure
-#RewriteRule ^([A-Z].*) /bin/view/$1 [PT] [L]
+#see /etc/foswiki/ShorterUrl.conf to activate ShorterUrls
 
 # The ScriptAlias defines the bin directory as a directory where CGI
 # scripts are allowed.
